# pollar-private-payments

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXPLORATION.md  Makefile  POLLAR_INTEGRATION.md  README.md  SUBMISSION.md  Trunk.toml  WHITELIST.md
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: dependency-audit.yml  deployment.yml  linter.yml  ub-detection.yml
app/: ARCHITECTURE.md  admin.html  disclosure.html  index.html  package-lock.json  package.json
app/crates/core/disclosure/: Cargo.toml
app/crates/core/disclosure/src/: lib.rs
app/crates/core/state/: Cargo.toml
app/crates/core/state/src/: lib.rs  schema.sql  storage.rs
app/crates/core/stellar/src/: contract_state.rs  indexer.rs  rpc.rs  tx_assemble.rs  tx_prepare.rs
app/crates/core/types/: Cargo.toml
app/crates/core/types/src/: lib.rs
app/crates/core/witness/: Cargo.toml
app/css/: app.css
app/js/: admin.js  db-locked.js  disclosure.js  pollar-modal.js  sw.js  ui.js  wallet-pollar-custodial.js  wallet-pollar.js  wallet.js
app/js/ui/: core.js  dashboard.js  navigation.js  notes-table.js  onboarding-wizard.js  op-history.js  pool.js  templates.js  transactions.js
circuits/: Cargo.toml
contracts/asp-non-membership/src/: lib.rs  test.rs
contracts/pool/src/: test.rs
contracts/public-key-registry/src/: test.rs
contracts/soroban-utils/: Cargo.toml
deployments/scripts/: deploy.sh
deployments/testnet/: deployments.json
deployments/testnet/circuit_keys/: README.md  selectiveDisclosure_1_vk.json
docs/: book.toml
docs/src/: SUMMARY.md  disclosure.md
e2e-tests/: Cargo.toml
poseidon2/: Cargo.toml
sdk/pool/src/: client.rs  pool.rs
sdk/state/src/: storage.rs
sdk/state/src/migrations/: 002_asp_membership_leaves_per_contract.sql
sdk/stellar/src/: contract_state.rs  indexer.rs
server/: .env.example  README.md  index.js  package-lock.json  package.json
server/leaf-cli/: Cargo.toml
server/leaf-cli/src/: main.rs
tools/ceremony-cli/: Cargo.toml
